// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button snapshots > matches danger button snapshot 1`] = `
<button
  class="font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-red-600 text-white hover:bg-red-700 focus:ring-red-500 px-4 py-2 "
>
  Danger Button
</button>
`;

exports[`Button snapshots > matches loading button snapshot 1`] = `
<button
  class="font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-700 focus:ring-blue-500 px-4 py-2 "
  disabled=""
>
  <div
    class="flex items-center justify-center"
  >
    <div
      class="w-5 h-5 border-2 border-white border-t-transparent rounded-full animate-spin"
    />
  </div>
</button>
`;

exports[`Button snapshots > matches primary button snapshot 1`] = `
<button
  class="font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-blue-600 text-white hover:bg-blue-700 focus:ring-blue-500 px-4 py-2 "
>
  Primary Button
</button>
`;

exports[`Button snapshots > matches secondary button snapshot 1`] = `
<button
  class="font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-gray-200 text-gray-800 hover:bg-gray-300 focus:ring-gray-500 px-4 py-2 "
>
  Secondary Button
</button>
`;
